# hs-GeoIP

./: .ghci  .gitignore  README.markdown  hs-GeoIP.cabal
src/Data/Geolocation/: GeoIP.hsc
test/: Main.hs  hs-GeoIP-test.cabal
test/data/: city_test.txt
