Name:                hs-GeoIP-test
Version:             0.1.1
Synopsis:            Haskell bindings to the MaxMind GeoIPCity database and its C library
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Category:            Data
Build-type:          Simple


Cabal-version:       >=1.6
extra-source-files:


Executable Main
  extra-libraries: GeoIP 
  hs-source-dirs: ./ ../src
  main-is: Main.hs
  
  build-tools: hsc2hs
  ghc-options: -Wall
  build-depends:
      base >= 4
    , bytestring >= 0.9
    , deepseq
  other-modules:
    Data.Geolocation.GeoIP


